- updated to most recent version of miniupnpc: http://miniupnp.tuxfamily.org/files/download.php?file=miniupnpc-20080217.tar.gz - removed the name part from the miniupnpc directory because that would be bad for future updates of the library - note that this update really increases the speed of the change of the portmappings. very nice.

--- a/.gitattributes
+++ b/.gitattributes
@@ -2379,41 +2379,41 @@ tool/TCMPortMapper/framework/libnatpmp-20071213/natpmp.c -text
 tool/TCMPortMapper/framework/libnatpmp-20071213/natpmp.h -text
 tool/TCMPortMapper/framework/libnatpmp-20071213/natpmpc.c -text
 tool/TCMPortMapper/framework/libnatpmp-20071213/testgetgateway.c -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/Changelog.txt -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/LICENCE -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/Makefile -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/Makefile.mingw -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/README -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/bsdqueue.h -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/declspec.h -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/igd_desc_parse.c -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/igd_desc_parse.h -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/man3/miniupnpc.3 -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/mingw32make.bat -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/minisoap.c -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/minisoap.h -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/minissdpc.c -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/minissdpc.h -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/miniupnpc.c -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/miniupnpc.h -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/miniupnpcmodule.c -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/miniwget.c -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/miniwget.h -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/minixml.c -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/minixml.h -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/minixmlvalid.c -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/pymoduletest.py -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/setup.py -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/setupmingw32.py -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/testminixml.c -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/testupnpreplyparse.c -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/upnpc.c -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/upnpcommands.c -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/upnpcommands.h -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/upnperrors.c -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/upnperrors.h -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/upnpreplyparse.c -text
-tool/TCMPortMapper/framework/miniupnpc-1.0-RC13/upnpreplyparse.h -text
+tool/TCMPortMapper/framework/miniupnpc/Changelog.txt -text
+tool/TCMPortMapper/framework/miniupnpc/LICENCE -text
+tool/TCMPortMapper/framework/miniupnpc/Makefile -text
+tool/TCMPortMapper/framework/miniupnpc/Makefile.mingw -text
+tool/TCMPortMapper/framework/miniupnpc/README -text
+tool/TCMPortMapper/framework/miniupnpc/bsdqueue.h -text
+tool/TCMPortMapper/framework/miniupnpc/declspec.h -text
+tool/TCMPortMapper/framework/miniupnpc/igd_desc_parse.c -text
+tool/TCMPortMapper/framework/miniupnpc/igd_desc_parse.h -text
+tool/TCMPortMapper/framework/miniupnpc/man3/miniupnpc.3 -text
+tool/TCMPortMapper/framework/miniupnpc/mingw32make.bat -text
+tool/TCMPortMapper/framework/miniupnpc/minisoap.c -text
+tool/TCMPortMapper/framework/miniupnpc/minisoap.h -text
+tool/TCMPortMapper/framework/miniupnpc/minissdpc.c -text
+tool/TCMPortMapper/framework/miniupnpc/minissdpc.h -text
+tool/TCMPortMapper/framework/miniupnpc/miniupnpc.c -text
+tool/TCMPortMapper/framework/miniupnpc/miniupnpc.h -text
+tool/TCMPortMapper/framework/miniupnpc/miniupnpcmodule.c -text
+tool/TCMPortMapper/framework/miniupnpc/miniwget.c -text
+tool/TCMPortMapper/framework/miniupnpc/miniwget.h -text
+tool/TCMPortMapper/framework/miniupnpc/minixml.c -text
+tool/TCMPortMapper/framework/miniupnpc/minixml.h -text
+tool/TCMPortMapper/framework/miniupnpc/minixmlvalid.c -text
+tool/TCMPortMapper/framework/miniupnpc/pymoduletest.py -text
+tool/TCMPortMapper/framework/miniupnpc/setup.py -text
+tool/TCMPortMapper/framework/miniupnpc/setupmingw32.py -text
+tool/TCMPortMapper/framework/miniupnpc/testminixml.c -text
+tool/TCMPortMapper/framework/miniupnpc/testupnpreplyparse.c -text
+tool/TCMPortMapper/framework/miniupnpc/upnpc.c -text
+tool/TCMPortMapper/framework/miniupnpc/upnpcommands.c -text
+tool/TCMPortMapper/framework/miniupnpc/upnpcommands.h -text
+tool/TCMPortMapper/framework/miniupnpc/upnperrors.c -text
+tool/TCMPortMapper/framework/miniupnpc/upnperrors.h -text
+tool/TCMPortMapper/framework/miniupnpc/upnpreplyparse.c -text
+tool/TCMPortMapper/framework/miniupnpc/upnpreplyparse.h -text
 tool/TCMPortMapper/general_artwork/DotGreen.png -text
 tool/TCMPortMapper/general_artwork/DotRed.png -text
 tool/TCMPortMapper/general_artwork/DotYellow.png -text
