--- a/tool/TCMPortMapper/framework/miniupnpc/Makefile.mingw
+++ b/tool/TCMPortMapper/framework/miniupnpc/Makefile.mingw
@@ -1,4 +1,4 @@
-# $Id: Makefile.mingw,v 1.6 2007/06/12 23:04:13 nanard Exp $
+# $Id: Makefile.mingw,v 1.7 2008/01/18 11:40:13 nanard Exp $
 CC = gcc
 #CFLAGS = -Wall -g -DDEBUG -DSTATICLIB
 CFLAGS = -Wall -Os -DNDEBUG -DSTATICLIB
@@ -11,7 +11,7 @@ all:	upnpc testminixml libminiupnpc.a
 clean:
 	del upnpc testminixml *.o
 
-libminiupnpc.a:	miniwget.o minixml.o igd_desc_parse.o minisoap.o miniupnpc.o upnpreplyparse.o upnpcommands.o
+libminiupnpc.a:	miniwget.o minixml.o igd_desc_parse.o minisoap.o miniupnpc.o upnpreplyparse.o upnpcommands.o upnperrors.o
 	$(AR) cr $@ $?
 
 pythonmodule:	libminiupnpc.a
