- added res independent artwork for ok urls and unreachable urls - added reachability status to connection browser - fixed issue with portmapper that did claim a lock in the NATPMP case and not give it free anymore therefore preventing any further action - changed the way URLImageView works to use a delegate instead of a fixed connection - changed the way documentURL is generated to not use NSHost anymore but the information we got from the portmapper - changed PlainTextWindowController so it updates its browser document URL icon depending on the reachability

--- a/.gitattributes
+++ b/.gitattributes
@@ -2144,6 +2144,8 @@ subethaedit/artwork/ToolbarIconTerminal.icns -text
 subethaedit/artwork/ToolbarIconTerminal.png -text
 subethaedit/artwork/ToolbarSitesFolderIcon.icns -text
 subethaedit/artwork/URLIcon.tiff -text
+subethaedit/artwork/URLIconNotOK.tiff -text
+subethaedit/artwork/URLIconOK.tiff -text
 subethaedit/artwork/UnknownPerson.icns -text
 subethaedit/artwork/UnknownPerson.png -text
 subethaedit/artwork/WaitPipe.png -text
