- added some artwork for friendcasts

--- a/.gitattributes
+++ b/.gitattributes
@@ -42,6 +42,11 @@ artwork/icons/Document128-1.icns -text
 artwork/icons/Document128-1.psd -text
 artwork/icons/Document16-1.psd -text
 artwork/icons/Document32-1.psd -text
+artwork/icons/FriendCast.lineform/Icon -text
+artwork/icons/FriendCast.lineform/data -text
+artwork/icons/FriendCast.opacity -text
+artwork/icons/FriendCast.pdf -text
+artwork/icons/FriendCast.png -text
 artwork/icons/HYDRA2a.tif -text
 artwork/icons/HYDRA3b.psd -text
 artwork/icons/HYDRA3b2[!!-~]16x16.psd -text
