- midwaystep to the browser list changes we proposed - currently showing the anti-lock for every connection so i can debug - anti-lock is ugly - will change - name now truncates middle - color currently still there but right alined. will be removed

--- a/.gitattributes
+++ b/.gitattributes
@@ -66,6 +66,7 @@ artwork/icons/Hydra2-1.psd -text
 artwork/icons/Hydra2-2.psd -text
 artwork/icons/Hydra3b-2.psd -text
 artwork/icons/HydraFiles.icns -text
+artwork/icons/LockOverlay.acorn -text
 artwork/icons/Seed.psd -text
 artwork/icons/ShowChangeMarks.psd -text
 artwork/icons/SubEthaEdit_Splash.psd -text
