--- a/.gitattributes
+++ b/.gitattributes
@@ -2039,11 +2039,13 @@ subethaedit/artwork/DefaultPerson.png -text
 subethaedit/artwork/EditPrefs.tiff -text
 subethaedit/artwork/EmptyButton.tiff -text
 subethaedit/artwork/FriendCast13.png -text
+subethaedit/artwork/FriendCast13None.png -text
 subethaedit/artwork/FriendCast13Off.png -text
 subethaedit/artwork/FriendCast16.png -text
 subethaedit/artwork/FriendCast16Active.png -text
 subethaedit/artwork/FriendCastBlack.tiff -text
 subethaedit/artwork/FriendCastBlue.tiff -text
+subethaedit/artwork/FriendcastingConnection.png -text
 subethaedit/artwork/GeneralPrefs.icns -text
 subethaedit/artwork/GeneralPrefs.tiff -text
 subethaedit/artwork/HUDRelative-1.png -text
@@ -2053,6 +2055,7 @@ subethaedit/artwork/HideChangeMarks.psd -text
 subethaedit/artwork/HomeFolderIcon.tiff -text
 subethaedit/artwork/Internet.tiff -text
 subethaedit/artwork/Internet13.png -text
+subethaedit/artwork/Internet13FriendcastConnection.png -text
 subethaedit/artwork/InternetResume.tiff -text
 subethaedit/artwork/InternetStop.tiff -text
 subethaedit/artwork/InvertedIBeam.tiff -text
