--- a/.gitattributes
+++ b/.gitattributes
@@ -644,7 +644,27 @@ Modes/LaTeX.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
 Modes/LaTeX.mode/Contents/Resources/German.lproj/Localizable.strings -text
 Modes/LaTeX.mode/Contents/Resources/ModeSettings.xml -text
 Modes/LaTeX.mode/Contents/Resources/RegexSymbols.xml -text
+Modes/LaTeX.mode/Contents/Resources/Scripts/05-TypesetAndView.scpt -text
+Modes/LaTeX.mode/Contents/Resources/Scripts/10-CleanUpAuxiliaries.scpt -text
+Modes/LaTeX.mode/Contents/Resources/Scripts/20-RunBibTeX.scpt -text
+Modes/LaTeX.mode/Contents/Resources/Scripts/30-ViewProduct.scpt -text
+Modes/LaTeX.mode/Contents/Resources/Scripts/40-BibDeskCompletions.scpt -text
+Modes/LaTeX.mode/Contents/Resources/Scripts/50-InlineMath.scpt -text
+Modes/LaTeX.mode/Contents/Resources/Scripts/60-InsertEnvironment.scpt -text
+Modes/LaTeX.mode/Contents/Resources/Scripts/70-CommentLines.scpt -text
+Modes/LaTeX.mode/Contents/Resources/Scripts/90-OpenEnvironment.scpt -text
+Modes/LaTeX.mode/Contents/Resources/Scripts/95-ModeHelp.scpt -text
+Modes/LaTeX.mode/Contents/Resources/Scripts/Read[!!-~]Me.rtf -text
+Modes/LaTeX.mode/Contents/Resources/Scripts/de.codingmonkeys.SubEthaEdit.LaTeX_environment.plist -text
+Modes/LaTeX.mode/Contents/Resources/Scripts/help.pdf -text svneol=unset#unset
 Modes/LaTeX.mode/Contents/Resources/SyntaxDefinition.xml -text
+Modes/LaTeX.mode/Contents/Resources/ToolbarBibDesk.png -text
+Modes/LaTeX.mode/Contents/Resources/bin/buildlatex.sh -text
+Modes/LaTeX.mode/Contents/Resources/bin/cleanupaux.sh -text
+Modes/LaTeX.mode/Contents/Resources/bin/comment.sh -text
+Modes/LaTeX.mode/Contents/Resources/bin/commentlines.sh -text
+Modes/LaTeX.mode/Contents/Resources/bin/runbibtex.sh -text
+Modes/LaTeX.mode/Contents/Resources/bin/viewproduct.sh -text
 Modes/LassoScript-HTML.mode/Contents/Info.plist -text
 Modes/LassoScript-HTML.mode/Contents/Resources/AutocompleteAdditions.txt -text
 Modes/LassoScript-HTML.mode/Contents/Resources/ChangeLog.txt -text
@@ -1848,11 +1868,13 @@ artwork/DefaultPerson.png -text
 artwork/EditPrefs.tiff -text
 artwork/EmptyButton.tiff -text
 artwork/FriendCast13.png -text
+artwork/FriendCast13None.png -text
 artwork/FriendCast13Off.png -text
 artwork/FriendCast16.png -text
 artwork/FriendCast16Active.png -text
 artwork/FriendCastBlack.tiff -text
 artwork/FriendCastBlue.tiff -text
+artwork/FriendcastingConnection.png -text
 artwork/GeneralPrefs.icns -text
 artwork/GeneralPrefs.tiff -text
 artwork/HUDRelative-1.png -text
@@ -1862,6 +1884,7 @@ artwork/HideChangeMarks.psd -text
 artwork/HomeFolderIcon.tiff -text
 artwork/Internet.tiff -text
 artwork/Internet13.png -text
+artwork/Internet13FriendcastConnection.png -text
 artwork/InternetResume.tiff -text
 artwork/InternetStop.tiff -text
 artwork/InvertedIBeam.tiff -text
