--- a/tool/DwarfTosser/Info.plist
+++ b/tool/DwarfTosser/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.DwarfTosser</string>
+	<string>de.codingmonkeys.DwarfTosser</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -24,5 +24,33 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+    <key>NSServices</key>
+        <array>
+                <dict>
+                        <key>NSMenuItem</key>
+                        <dict>
+                                <key>default</key>
+                                <string>DwarfTosser/Resolve Symbols</string>
+                        </dict>
+                        <key>NSMessage</key>
+                        <string>resolveSymbolsInPasteboard</string>
+                        <key>NSKeyEquivalent</key>
+                        <dict>
+                                <key>default</key>
+                                <string>R</string>
+                        </dict>
+                        <key>NSPortName</key>
+                        <string>DwarfTosser</string>
+                        <key>NSSendTypes</key>
+                        <array>
+                                <string>NSStringPboardType</string>
+                        </array>
+                        <key>NSReturnTypes</key>
+                        <array>
+                                <string>NSStringPboardType</string>
+                        </array>
+                </dict>
+        </array>
+
 </dict>
 </plist>
