- renamed SubEthaEdit in Presets to SubEthaEngine - added UPNP Port Mapping listing and removal of ports not mapped using port mapper

--- a/tool/TCMPortMapper/portmap_dom/Presets.plist
+++ b/tool/TCMPortMapper/portmap_dom/Presets.plist
@@ -4,7 +4,7 @@
 <array>
 	<dict>
 		<key>mappingTitle</key>
-		<string>SubEthaEdit</string>
+		<string>SubEtha Engine</string>
 		<key>desiredPort</key>
 		<integer>6942</integer>
 		<key>localPort</key>
