- added versioning - added displaying of version information to Port Map - added create zip targets

--- a/tool/TCMPortMapper/framework/TCMPortMapper-Info.plist
+++ b/tool/TCMPortMapper/framework/TCMPortMapper-Info.plist
@@ -16,5 +16,7 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>BuildRevision</key>
+	<string>1.0</string>
 </dict>
 </plist>
