--- a/tool/TCMPortMapper/portmap/Info.plist
+++ b/tool/TCMPortMapper/portmap/Info.plist
@@ -18,11 +18,15 @@
 	<string>APPL</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1.0b2</string>
+	<string>1</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.4</string>
 </dict>
 </plist>
