--- a/.gitattributes
+++ b/.gitattributes
@@ -840,20 +840,18 @@ subethaedit/Modes/LaTeX.mode/Contents/Resources/English.lproj/Localizable.string
 subethaedit/Modes/LaTeX.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
 subethaedit/Modes/LaTeX.mode/Contents/Resources/German.lproj/Localizable.strings -text
 subethaedit/Modes/LaTeX.mode/Contents/Resources/ModeSettings.xml -text
+subethaedit/Modes/LaTeX.mode/Contents/Resources/Read[!!-~]Me.rtf -text
 subethaedit/Modes/LaTeX.mode/Contents/Resources/RegexSymbols.xml -text
-subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/05-TypesetAndView.scpt -text
-subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/10-CleanUpAuxiliaries.scpt -text
-subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/20-RunBibTeX.scpt -text
-subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/30-ViewProduct.scpt -text
-subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/40-BibDeskCompletions.scpt -text
-subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/50-InlineMath.scpt -text
-subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/60-InsertEnvironment.scpt -text
-subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/70-CommentLines.scpt -text
-subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/90-OpenEnvironment.scpt -text
-subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/95-ModeHelp.scpt -text
-subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/Read[!!-~]Me.rtf -text
-subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/de.codingmonkeys.SubEthaEdit.LaTeX_environment.plist -text
-subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/help.pdf -text svneol=unset#unset
+subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/05-TypesetAndView.scpt -text svneol=unset#unset
+subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/10-CleanUpAuxiliaries.scpt -text svneol=unset#unset
+subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/20-RunBibTeX.scpt -text svneol=unset#unset
+subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/30-ViewProduct.scpt -text svneol=unset#unset
+subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/40-BibDeskCompletions.scpt -text svneol=unset#unset
+subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/50-InlineMath.scpt -text svneol=unset#unset
+subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/60-InsertEnvironment.scpt -text svneol=unset#unset
+subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/70-CommentLines.scpt -text svneol=unset#unset
+subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/90-OpenEnvironment.scpt -text svneol=unset#unset
+subethaedit/Modes/LaTeX.mode/Contents/Resources/Scripts/95-ModeHelp.scpt -text svneol=unset#unset
 subethaedit/Modes/LaTeX.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/LaTeX.mode/Contents/Resources/ToolbarBibDesk.png -text
 subethaedit/Modes/LaTeX.mode/Contents/Resources/bin/buildlatex.sh -text
@@ -862,6 +860,8 @@ subethaedit/Modes/LaTeX.mode/Contents/Resources/bin/comment.sh -text
 subethaedit/Modes/LaTeX.mode/Contents/Resources/bin/commentlines.sh -text
 subethaedit/Modes/LaTeX.mode/Contents/Resources/bin/runbibtex.sh -text
 subethaedit/Modes/LaTeX.mode/Contents/Resources/bin/viewproduct.sh -text
+subethaedit/Modes/LaTeX.mode/Contents/Resources/de.codingmonkeys.SubEthaEdit.LaTeX_environment.plist -text
+subethaedit/Modes/LaTeX.mode/Contents/Resources/help.pdf -text svneol=unset#unset
 subethaedit/Modes/LassoScript-HTML.mode/Contents/Info.plist -text
 subethaedit/Modes/LassoScript-HTML.mode/Contents/Resources/AutocompleteAdditions.txt -text
 subethaedit/Modes/LassoScript-HTML.mode/Contents/Resources/ChangeLog.txt -text
