--- a/.gitattributes
+++ b/.gitattributes
@@ -2613,6 +2613,7 @@ tool/autodoc -text
 tool/convertcolor.pl -text
 tool/customers2vcf.pl -text
 tool/dsa-signing/TheCodingMonkeysCodeSigning.cer -text
+tool/dsa-signing/TheCodingMonkeysCodeSigning.p12 -text
 tool/dsa-signing/dsa_priv.pem -text
 tool/dsa-signing/dsa_pub.pem -text
 tool/dsa-signing/sign -text
