- adding TextEdit example to add folding to as a testbed

--- a/.gitattributes
+++ b/.gitattributes
@@ -2566,6 +2566,72 @@ tool/TCMXMLParser/TCMXMLParser_Prefix.pch -text
 tool/TCMXMLParser/expat.h -text
 tool/TCMXMLParser/libexpat.a -text
 tool/TCMXMLParser/main.m -text
+tool/TextEdit-Folding/Controller.h -text
+tool/TextEdit-Folding/Controller.m -text
+tool/TextEdit-Folding/Document.h -text
+tool/TextEdit-Folding/Document.m -text
+tool/TextEdit-Folding/DocumentController.h -text
+tool/TextEdit-Folding/DocumentController.m -text
+tool/TextEdit-Folding/DocumentPropertiesPanelController.h -text
+tool/TextEdit-Folding/DocumentPropertiesPanelController.m -text
+tool/TextEdit-Folding/DocumentWindow.nib/classes.nib -text
+tool/TextEdit-Folding/DocumentWindow.nib/info.nib -text
+tool/TextEdit-Folding/DocumentWindow.nib/keyedobjects.nib -text
+tool/TextEdit-Folding/DocumentWindowController.h -text
+tool/TextEdit-Folding/DocumentWindowController.m -text
+tool/TextEdit-Folding/Edit.icns -text
+tool/TextEdit-Folding/Edit_main.m -text
+tool/TextEdit-Folding/EncodingManager.h -text
+tool/TextEdit-Folding/EncodingManager.m -text
+tool/TextEdit-Folding/English.lproj/DocumentProperties.nib/designable.nib -text
+tool/TextEdit-Folding/English.lproj/DocumentProperties.nib/keyedobjects.nib -text
+tool/TextEdit-Folding/English.lproj/Edit.nib/classes.nib -text
+tool/TextEdit-Folding/English.lproj/Edit.nib/info.nib -text
+tool/TextEdit-Folding/English.lproj/Edit.nib/keyedobjects.nib -text
+tool/TextEdit-Folding/English.lproj/EncodingAccessory.nib/classes.nib -text
+tool/TextEdit-Folding/English.lproj/EncodingAccessory.nib/info.nib -text
+tool/TextEdit-Folding/English.lproj/EncodingAccessory.nib/objects.nib -text
+tool/TextEdit-Folding/English.lproj/InfoPlist.strings -text
+tool/TextEdit-Folding/English.lproj/LinePanel.strings -text
+tool/TextEdit-Folding/English.lproj/Localizable.strings -text
+tool/TextEdit-Folding/English.lproj/Preferences.nib/classes.nib -text
+tool/TextEdit-Folding/English.lproj/Preferences.nib/info.nib -text
+tool/TextEdit-Folding/English.lproj/Preferences.nib/keyedobjects.nib -text
+tool/TextEdit-Folding/English.lproj/PrintPanelAccessory.nib/designable.nib -text
+tool/TextEdit-Folding/English.lproj/PrintPanelAccessory.nib/keyedobjects.nib -text
+tool/TextEdit-Folding/English.lproj/PrintPanelAccessory.strings -text
+tool/TextEdit-Folding/English.lproj/SelectEncodingsPanel.nib/classes.nib -text
+tool/TextEdit-Folding/English.lproj/SelectEncodingsPanel.nib/info.nib -text
+tool/TextEdit-Folding/English.lproj/SelectEncodingsPanel.nib/keyedobjects.nib -text
+tool/TextEdit-Folding/English.lproj/SelectLinePanel.nib/classes.nib -text
+tool/TextEdit-Folding/English.lproj/SelectLinePanel.nib/info.nib -text
+tool/TextEdit-Folding/English.lproj/SelectLinePanel.nib/keyedobjects.nib -text
+tool/TextEdit-Folding/English.lproj/ServicesMenu.strings -text
+tool/TextEdit-Folding/English.lproj/ZoomValues.strings -text
+tool/TextEdit-Folding/Info-TextEdit.plist -text
+tool/TextEdit-Folding/LinePanelController.h -text
+tool/TextEdit-Folding/LinePanelController.m -text
+tool/TextEdit-Folding/MultiplePageView.h -text
+tool/TextEdit-Folding/MultiplePageView.m -text
+tool/TextEdit-Folding/Preferences.h -text
+tool/TextEdit-Folding/Preferences.m -text
+tool/TextEdit-Folding/PrintPanelAccessoryController.h -text
+tool/TextEdit-Folding/PrintPanelAccessoryController.m -text
+tool/TextEdit-Folding/README.rtf -text
+tool/TextEdit-Folding/ScalingScrollView.h -text
+tool/TextEdit-Folding/ScalingScrollView.m -text
+tool/TextEdit-Folding/TextEdit[!!-~]Test[!!-~]Document.rtf -text
+tool/TextEdit-Folding/TextEdit.scatterload -text
+tool/TextEdit-Folding/TextEdit.scriptSuite -text
+tool/TextEdit-Folding/TextEdit.scriptTerminology -text
+tool/TextEdit-Folding/TextEdit.xcodeproj/dom.mode1v3 -text
+tool/TextEdit-Folding/TextEdit.xcodeproj/dom.pbxuser -text
+tool/TextEdit-Folding/TextEdit.xcodeproj/project.pbxproj -text
+tool/TextEdit-Folding/TextEditErrors.h -text
+tool/TextEdit-Folding/html.icns -text
+tool/TextEdit-Folding/rtf.icns -text
+tool/TextEdit-Folding/rtfd.icns -text
+tool/TextEdit-Folding/txt.icns -text
 tool/VIMode/English.lproj/InfoPlist.strings -text
 tool/VIMode/English.lproj/MainMenu.nib/classes.nib -text
 tool/VIMode/English.lproj/MainMenu.nib/info.nib -text
