--- a/.gitattributes
+++ b/.gitattributes
@@ -1894,6 +1894,14 @@ subethaedit/TCMMillionMonkeys/TCMMMUser.m -text
 subethaedit/TCMMillionMonkeys/TCMMMUserManager.h -text
 subethaedit/TCMMillionMonkeys/TCMMMUserManager.m -text
 subethaedit/TCMMillionMonkeys/TCMMillionMonkeys.h -text
+subethaedit/TCMPortMapper/TCMPortMapper.framework/Headers -text
+subethaedit/TCMPortMapper/TCMPortMapper.framework/Resources -text
+subethaedit/TCMPortMapper/TCMPortMapper.framework/TCMPortMapper -text
+subethaedit/TCMPortMapper/TCMPortMapper.framework/Versions/A/Headers/TCMPortMapper.h -text
+subethaedit/TCMPortMapper/TCMPortMapper.framework/Versions/A/Resources/Info.plist -text
+subethaedit/TCMPortMapper/TCMPortMapper.framework/Versions/A/Resources/OUItoCompany.plist -text
+subethaedit/TCMPortMapper/TCMPortMapper.framework/Versions/A/TCMPortMapper -text
+subethaedit/TCMPortMapper/TCMPortMapper.framework/Versions/Current -text
 subethaedit/TCMPreferenceController.h -text
 subethaedit/TCMPreferenceController.m -text
 subethaedit/TCMPreferenceModule.h -text
