- now displaying max folding depth in the gutter (waiting for more meaningful input though ;) )   - renamed the identifier back to SubEthaEdit without folding so i can do applescript stuff

--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -247,7 +247,7 @@
 	<key>CFBundleIconFile</key>
 	<string>SubEthaEdit.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>de.codingmonkeys.SubEthaEdit-Folding</string>
+	<string>de.codingmonkeys.SubEthaEdit</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
