Adding unimall serials

--- a/.gitattributes
+++ b/.gitattributes
@@ -2781,6 +2781,7 @@ tool/serials/makeserial.pl -text
 tool/serials/serials1.txt -text
 tool/serials/serials2.txt -text
 tool/serials/twolicenses.txt -text
+tool/serials/unimall1.txt -text
 tool/uikitparsen.txt -text
 tool/xmpp-cli/Controller.h -text
 tool/xmpp-cli/Controller.m -text
